--- a/apps/Tickerr/common/css/main.css
+++ b/apps/Tickerr/common/css/main.css
@@ -30,13 +30,13 @@
 }
 
 #pagePlaceHolder {
-	top: 44px;
-	bottom: 49px;
+	top: 0px;
+	bottom: 0px;
 	position: relative;
 }
 
 .future-ads {
-	width: 80%;
+	width: 50%;
 }
 .future-ads>div:first-child {
 	border: solid #FFF 1px;
@@ -45,8 +45,92 @@
 	border-style: inset;
 }
 .app-footer .tab-nav {
-	width: 20%;
+	width: 100%;
 }
 .app-footer .tabs-top > .tabs {
 	top: 0px;
 }
+
+.text-red {
+	color: red;
+}
+
+.text-green {
+	color: green;
+}
+
+.text-lightgreen {
+	color: lightgreen;
+}
+
+.text-gray {
+	color: gray;
+}
+
+.text-black {
+	color: black;
+}
+
+.text-medium-index-price {
+	font-size: 15px;
+	text-align: left;
+	vertical-align: top;
+}
+
+.text-medium-ticker {
+	font-size: 15px;
+	vertical-align: center;
+}
+
+.text-medium-ticker-change {
+	font-size: 15px;
+	text-align: right;
+}
+
+.text-small-last-update {
+	font-size: 10px;
+	text-align: right;
+  	font-family: "Helvetica Neue", "Roboto", sans-serif;
+  	padding-left: 0px;
+}
+
+.text-small-medium {
+	font-size: 12px;
+	text-align: left;
+  	font-family: "Helvetica Neue", "Roboto", sans-serif;
+  	padding-left: 0px;
+}
+
+.index-ticker-width {
+	width:120px;
+}
+
+.img-index {
+	vertical-align: center;
+}
+
+.img-stock-select {
+	width:20px;
+	vertical-align: center;
+}
+
+.text-tiny {
+	font-size: 9px;
+}
+
+.div-25 {
+    height: 25%;
+    display:flex;/* be a flexbox too */
+}
+
+img-commodity
+{
+    width: 16px;
+    height:16px;
+}
+
+.ion-arrow-down-b-red {
+  content: "\red"; }
+  
+  .ion-arrow-up-b-green {
+  content: "\green"; }
